--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,18 @@ android {
     }
 }
 
+repositories {
+    maven { url 'http://clojars.org/repo' }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
+    compile 'com.pusher:pusher-java-client:1.0.0'
+    compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.google.code.gson:gson:2.2.4' // for parsing JSON
+    compile 'com.squareup.picasso:picasso:2.1.1' // for image rendering
 }
